@@ -39,6 +39,7 @@
 	* Changed table cache_hash to use t3lib_cache
 	* Added indexes for the cache tables (cache_hash, cache_pages, cache_pagesection)
 	* Added options to change the backends used for each cache (cache_hash, cache_pages, cache_pagesection)
+	* Fixed several issues in t3lib_cache_backend_file
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
